# uptime-monitor

./: .gitignore  Makefile  docker-compose.test.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 2917d0642653_add_naming_convention_to_metadata.py  5b59134e8fd8_initial_revision.py  79442881c079_rename_checklogs_to_check_logs.py  d2ae86683076_initial_migration.py  e17974d1c973_add_new_columns_to_monitors.py  fb2ad52a15a2_rename_columns_add_cascade_delete.py
src/: config.py  main.py
src/api/: dependencies.py  router.py
src/api/v1/routers/: auth.py  monitor.py
src/core/: config.py  exceptions.py  security.py  utils.py
src/database/: base.py  core.py  dependencies.py
src/models/: __init__.py  check_log.py  incident.py  monitor.py  user.py
src/repositories/: dependencies.py  monitor_repository.py  user_repository.py
src/schemas/: monitor.py  token.py  user.py
src/services/: auth_service.py  dependencies.py  monitor_service.py
tests/: conftest.py
tests/auth/: helpers.py  test_login.py  test_me.py  test_refresh.py  test_register.py
tests/monitor/: helpers.py  test_create_monitor.py  test_delete_monitor.py  test_get_monitor_by_id.py  test_get_monitors.py  test_update_monitor.py
